--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,15 @@
+/*
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $gray-100 !default;
+$dark:          $gray-900 !default;*/
 .contenedor-imgs {
   position: relative;
 }
 
-.img-app {
+.img-app, .img-feature {
   position: relative;
   z-index: 8;
 }
@@ -17,13 +24,16 @@
   border-radius: 40% 0 0 40%;
 }
 
-/*
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-900 !default;*/
+.sombra-feature {
+  width: 100%;
+  height: 90%;
+  background-color: #5265E1;
+  position: absolute;
+  top: 25%;
+  right: 30%;
+  border-radius: 0 40% 40% 0;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -11989,4 +11999,19 @@ body {
 
 main {
   background-color: white;
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  color: #212529;
+  /*background-color: #fff;*/
+  border: none;
+  border-bottom: 0.25rem solid #FA5959;
+}
+
+.nav-tabs .nav-link {
+  color: #adb5bd;
+  border: none;
+  /*margin-bottom: -1px;
+    background: none; */
 }
