--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,21 @@ $dark:          $gray-900 !default;*/
   border-radius: 0 40% 40% 0;
 }
 
+@media (min-width: 992px) {
+  body {
+    background-color: chartreuse;
+  }
+  .cards-custom div:nth-child(1) {
+    margin-top: 2rem;
+  }
+  .cards-custom div:nth-child(2) {
+    margin-top: 4rem;
+  }
+  .cards-custom div:nth-child(3) {
+    margin-top: 6rem;
+  }
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
