--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,8 +45,25 @@ $dark:          $gray-900 !default;*/
     position: absolute;
     top:25%;
     right: 30%;
-          
+
     border-radius: 0 40% 40% 0;   
+}
+
+@media (min-width: 992px) { 
+    body{
+        background-color: chartreuse;
+    }
+    .cards-custom div:nth-child(1) {
+        margin-top: 2rem;
+    }
+    
+    .cards-custom div:nth-child(2) {
+        margin-top: 4rem;
+    }
+    
+    .cards-custom div:nth-child(3) {
+        margin-top: 6rem;
+    }    
 }
 
 
@@ -81,3 +98,7 @@ main {
     /*margin-bottom: -1px;
     background: none; */
 }
+
+
+
+
