--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,7 +28,7 @@ $dark:          $gray-900 !default;*/
 }
 .img-sombra{
     position: absolute;
-    width:200%;
+    width:300%;
     height: 80%;
     top:30%;
     left:30%;    
@@ -37,11 +37,15 @@ $dark:          $gray-900 !default;*/
 
 .sombra-feature {
     position: absolute;
-    width:200%;
+    width:300%;
     height: 90%;
     top:25%;
-    right: 15%;
+    right: 25%;
     //border-radius: 0 40% 40% 0;   
+}
+
+.navbar-and-contacts {
+    background-color: #242946;
 }
 
 @media (min-width: 992px) { 
@@ -84,11 +88,14 @@ $dark:          $gray-900 !default;*/
 
 .accordion-button:not(.collapsed)::after {
     background-image: url("/images/icon-arrow.svg");           
-  }
+}
   
-  .accordion-button::after {
+.accordion-button::after {
     background-image: url("/images/icon-arrow.svg");
-  }
-
+}
+.people-joined{
+    font-weight: bold;
+    letter-spacing: 0.4rem;
+}
 
 
